--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "npm build && concurrently \"npm run server\" \"npm run webpack\"",
     "webpack": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --progress --config client/build/webpack.dev.conf.js",
-    "server": "node server/bin/www"
+    "server": "node server/bin/www",
+    "heroku-postbuild": "webpack -p"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
