--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "npm build && concurrently \"npm run server\" \"npm run webpack\"",
-    "webpack": "webpack-dev-server --inline --progress --config client/build/webpack.dev.conf.js",
-    "server": "node server/bin/www",
-    "heroku-postbuild": "webpack -p"
+    "start": "npm install && concurrently \"npm run server\" \"npm run webpack\"",
+    "webpack": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --progress --config client/build/webpack.dev.conf.js",
+    "server": "node server/bin/www"
+    
   },
   "dependencies": {
     "body-parser": "^1.18.3",
