modify npm run build script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "npm install && npm build && npm run server",
+    "start": "npm install && npm run build && npm run server",
     "webpack": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --progress --config client/build/webpack.dev.conf.js",
     "server": "node server/bin/www",
     "build": "node client/build/build.js"
