--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "mapbox-gl": "^0.51.0-beta.2",
     "mapbox-gl-vue": "^1.9.0",
     "mongoose": "^5.3.7",
     "morgan": "~1.9.0",
